Github Actions modified

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -41,6 +41,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
   deploy:
     runs-on: self-hosted
+    needs: [build]
     env:
       sha_short: ${{ needs.build.outputs.sha_short}}
     steps:
