[skip ci] Terraform state backup file added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,5 @@ build/
 terraform/.terraform/** 
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
 terraform/.terraform.tfstate.lock.info
